2006-08-20 Added mathtext2.py: Replacement for mathtext.py. Supports _ ^,
           \rm, \cal etc., \sin, \cos etc., unicode, recursive nestings,
           inline math mode. The only backend currently supported is Agg
           __init__.py: added new rc params for mathtext2
           added mathtext2_demo.py example - ES

2006-08-19 Added embedding_in_qt4.py example - DSD

2006-08-11 Added scale free Ellipse patch for Agg - CM

2006-08-10 Added converters to and from julian dates to matplotlib.dates
           (num2julian and julian2num) - JDH

2006-08-08 Fixed widget locking so multiple widgets could share the
           event handling - JDH

2006-08-07 Added scale free Ellipse patch to SVG and PS - CM

2006-08-05 Re-organized imports in numerix for numpy 1.0b2 -- TEO

2006-08-04 Added draw_markers to PDF backend. - JKS

2006-08-01 Fixed a bug in postscript's rendering of dashed lines - DSD

2006-08-01 figure.py: savefig() update docstring to add support for 'format'
           argument.
           backend_cairo.py: print_figure() add support 'format' argument. - SC

2006-07-31 Don't let postscript's xpdf distiller compress images - DSD

2006-07-31 Added shallowcopy() methods to all Transformations;
           removed copy_bbox_transform and copy_bbox_transform_shallow
           from transforms.py;
           added offset_copy() function to transforms.py to
           facilitate positioning artists with offsets.
           See examples/transoffset.py. - EF

2006-07-31 Don't let postscript's xpdf distiller compress images - DSD

2006-07-29 Fixed numerix polygon bug reported by Nick Fotopoulos.
           Added inverse_numerix_xy() transform method.
           Made autoscale_view() preserve axis direction
           (e.g., increasing down).- EF

2006-07-28 Added shallow bbox copy routine for transforms -- mainly
           useful for copying transforms to apply offset to. - JDH

2006-07-28 Added resize method to FigureManager class