@@ -1,3 +1,6 @@
+2006-08-21 mathtext2.py: Initial support for fractions
+           Updated the mathtext2_demo.py - ES
+
 2006-08-20 Added mathtext2.py: Replacement for mathtext.py. Supports _ ^,
            \rm, \cal etc., \sin, \cos etc., unicode, recursive nestings,
            inline math mode. The only backend currently supported is Agg
